--- a/Subject1.html
+++ b/Subject1.html
@@ -46,7 +46,7 @@
 <td style="width: 268.8px; text-align: right; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ประจำปีการศึกษา 2564</strong></td>
 </tr>
 <tr>
-<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>รหัสวิชา 020413207&nbsp; วิชา&nbsp; คอมพิวเตอร์กราฟิกส์ (Computer Graphics)</strong></td>
+<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>รหัสวิชา 1150-1112&nbsp; วิชา&nbsp; เครือข่ายเบิ้องต้น (basic network)</strong></td>
 <td style="width: 268.8px; text-align: right; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>ตอนที่ 1</strong></td>
 </tr>
 <tr>
@@ -54,7 +54,7 @@
 <td style="width: 268.8px; text-align: right; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>เวลา 13.00 น. ถึง 16.00 น.</strong></td>
 </tr>
 <tr>
-<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>อาจารย์ผู้ออกข้อสอบ ดร.สมคิด แซ่หลี</strong></td>
+<td style="width: 294.4px; font-family: &#39;Sarabun&#39;, sans-serif;"><strong>อาจารย์ผู้ออกข้อสอบ ดร.วิชกูล เพียรกิจ</strong></td>
 <td style="width: 268.8px; text-align: right;">&nbsp;</td>
 </tr>
 </tbody>
@@ -106,7 +106,7 @@
 </tbody>
 </table>
 <p>&nbsp;</p>
-<h2 style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="sebs://github.com/ajarnlee/SEBlink/raw/main/kmutnbPreTestExam.seb">คลิ๊กเพื่อเริ่มทำข้อสอบ</a></span></strong></h2>
+<h2 style="text-align: center; font-family: &#39;Sarabun&#39;, sans-serif;"><strong><span style="color: #0000ff;"><a style="color: #0000ff;" href="sebs://github.com/Wichakool/SEB_Link/raw/main/topology-test.seb">คลิ๊กเพื่อเริ่มทำข้อสอบ</a></span></strong></h2>
       
   
 </body><loom-container id="lo-engage-ext-container"><loom-shadow classname="resolved"></loom-shadow></loom-container></html>
